--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
 <body>
 
 <h1>My Projects</h1>
+<h2> IC2it Flyer</h2>
+<img src="ic2it2.jpg" alt="ic2it" style="width:304px;height:228px;">
 
 
 </body>
