trying to connect pic

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 
 <h1>My Projects</h1>
 <h2> IC2it Flyer</h2>
-<img src="/Users/katyyoung/Documents/portfolio/images/IC2it2.jpg" alt="ic2it" style="width:800px;height:1100px;">
+<img src="/images/IC2it2.jpg" alt="ic2it" style="width:304px;height:228px;">
 
 
 </body>
