--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 <h1>My Projects</h1>
 <h2> IC2it Flyer</h2>
 <img src="/images/IC2it2.jpg" alt="ic2it" style="width:304px;height:228px;">
-<h2> PIV Fler</h2>
+<h2> PIV Flyer</h2>
 
 
 </body>
