--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
 <h2> IC2it Flyer</h2>
 <img src="/images/IC2it2.jpg" alt="ic2it" style="width:304px;height:228px;">
 <h2> PIV Flyer</h2>
+<img src="/images/PIV1.jpg" alt="PIV" style="width:304px;height:228px;">
 
 
 </body>
