--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,16 @@
 <body>
 
 <h1>My Projects</h1>
-<h2> IC2it Flyer</h2>
-<img src="/portfolio/images/IC2it2.jpg" alt="ic2it" style="width:304px;height:228px;">
-<h2> PIV Flyer</h2>
-<img src="/images/PIV1.jpg" alt="PIV" style="width:304px;height:228px;">
 
+<div class="work">
+  <h2>IC2it</h2>
+<img src="/portfolio/images/IC2it2.jpg" alt="ic2it" style="width:304px;height:228px;">
+</div>
+
+<div class="work">
+<h2>PIV Flyer</h2>
+<img src="/images/PIV1.jpg" alt="PIV" style="width:304px;height:228px;">
+</div>
 
 </body>
 </html>
