--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 
 <div class="work">
   <h2>IC2it</h2>
-<img src="images/IC2it2.jpg" alt="ic2it" style="width:304px;height:228px;">
+<img src="images/IC2it2.jpg" alt="ic2it" style="max-width:300px;height:224px;">
 </div>
 
 <div class="work">
