--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 </header>
 
 <div class="work">
-  <h2><a href="url">IC2it</a></h2>
+  <h2><a href="images/IC2it2.jpg">IC2it</a></h2>
 <img src="images/IC2it2.jpg" alt="ic2it" style="max-width:300px;height:224px;">
 </div>
 
