--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="work">
-<h2><a href="images/PIV1.jpg">IC2it</a></h2>
+<h2><a href="images/PIV1.jpg">PIV</a></h2>
 <img src="images/PIV1.jpg" alt="PIV" style="width:304px;height:228px;">
 </div>
 
