--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,11 @@
 <h1>My Projects</h1>
 </header>
 
+<nav>
+  work<br>
+  photography<br>
+</nav>
+
 <div class="work">
   <h2><a href="images/IC2it2.jpg">IC2it</a></h2>
 <img src="images/IC2it2.jpg" alt="ic2it" style="max-width:304px;height:228px;">
