--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,9 @@
   photography<br>
 </nav>
 
+<section>
+  img src="images/flower.jpg" alt="flower" style="">
+
 <div class="work">
   <h2><a href="images/IC2it2.jpg">IC2it</a></h2>
 <img src="images/IC2it2.jpg" alt="ic2it" style="max-width:304px;height:228px;">
