--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 </nav>
 
 <section>
-  img src="images/flower.jpg" alt="flower" style="">
+  <img src="images/flower.jpg" alt="flower" style="">
 
 <div class="work">
   <h2><a href="images/IC2it2.jpg">IC2it</a></h2>
