--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
 
 <nav>
   <a href="work.html">Work</a><br>
-  Photography<br>
-  About me<br>
+  <a href="photography.html">Photography</a><br>
+  <a href="about.html">About me</a><br>
 </nav>
 
 <section>
