--- a/about.html
+++ b/about.html
@@ -11,6 +11,6 @@
 <h1>About me</h1>
 </header>
 
-<p>My name is Katy Young and I am a part-time student at Bradley University. I am majoring in Interactive Media with a concentration in web and application design. I also work full-time at OSF Saint Francis Medical Center in the Professional Development department. My job title is an Instructional Tech Specialist working mostly with the Learning Management System (HealthStream) and SharePoint 2010.
+<p>My name is Katy Young and I am a part-time student at Bradley University. I am majoring in Interactive Media with a concentration in web and application design. I also work full-time at OSF Saint Francis Medical Center in the Professional Development department. My job title is an Instructional Tech Specialist working mostly with the Learning Management System (HealthStream) and SharePoint 2010.<br>
 
 I am seeking this degree to further my career at OSF Saint Francis Medical Center. Not only am I working to understand the system better but to also develop more effective courses for the LMS that will provide education throughout the medical center. </p>
