--- a/photography.html
+++ b/photography.html
@@ -10,3 +10,8 @@
 <header>
 <h1>Photography</h1>
 </header>
+
+<div class="work">
+  <h2><a href="images/aiden1.jpg">aiden</a></h2>
+<img src="images/aiden1" alt="aiden" style="max-width:304px;height:228px;">
+</div>
