--- a/photography.html
+++ b/photography.html
@@ -13,5 +13,5 @@
 
 <div class="work">
   <h2><a href="images/aiden1.jpg">aiden</a></h2>
-<img src="images/aiden1" alt="aiden" style="max-width:304px;height:228px;">
+<img src="images/aiden1.jpg" alt="aiden" style="max-width:304px;height:228px;">
 </div>
