--- a/photography.html
+++ b/photography.html
@@ -12,6 +12,19 @@
 </header>
 
 <div class="work">
-  <h2><a href="images/aiden1.jpg">aiden</a></h2>
+  <h2><a href="images/aiden1.jpg">Aiden</a></h2>
 <img src="images/aiden1.jpg" alt="aiden" style="max-width:304px;height:228px;">
 </div>
+<div class="work">
+  <h2><a href="images/aiden2.jpg">Aiden</a></h2>
+<img src="images/aiden2.jpg" alt="aiden" style="max-width:304px;height:228px;">
+</div>
+<div class="work">
+  <h2><a href="images/cameron1.jpg">Cameron</a></h2>
+<img src="images/cameron1.jpg" alt="cameron" style="max-width:304px;height:228px;">
+</div>
+<div class="work">
+  <h2><a href="images/hailee1.jpg">Hailee</a></h2>
+<img src="images/hailee1.jpg" alt="hailee" style="max-width:304px;height:228px;">
+</div>
+<div class="work">
